Lab3_AST/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instruction -> assignment SEMICOLON
Rule 5     instruction -> call SEMICOLON
Rule 6     instruction -> loop
Rule 7     instruction -> branch
Rule 8     instruction -> LCURLBRACK instructions RCURLBRACK
Rule 9     assignment -> ID assignment_operator expression
Rule 10    assignment -> ID matrix assignment_operator expression
Rule 11    assignment_operator -> ASSIGN
Rule 12    assignment_operator -> ADDASSIGN
Rule 13    assignment_operator -> SUBASSIGN
Rule 14    assignment_operator -> MULASSIGN
Rule 15    assignment_operator -> DIVASSIGN
Rule 16    expression -> term
Rule 17    expression -> LPARENT expression RPARENT
Rule 18    expression -> expression ADD expression
Rule 19    expression -> expression SUB expression
Rule 20    expression -> expression MUL expression
Rule 21    expression -> expression DIV expression
Rule 22    expression -> expression DOTADD expression
Rule 23    expression -> expression DOTSUB expression
Rule 24    expression -> expression DOTMUL expression
Rule 25    expression -> expression DOTDIV expression
Rule 26    expression -> SUB expression
Rule 27    expression -> expression TRANSPOSE
Rule 28    comparison -> expression comparison_operator expression
Rule 29    comparison_operator -> SMALLER
Rule 30    comparison_operator -> LARGER
Rule 31    comparison_operator -> SMALLEREQ
Rule 32    comparison_operator -> LARGEREQ
Rule 33    comparison_operator -> NOTEQ
Rule 34    comparison_operator -> EQ
Rule 35    call -> BREAK
Rule 36    call -> CONTINUE
Rule 37    call -> RETURN expression
Rule 38    call -> PRINT print_inputs
Rule 39    print_inputs -> print_inputs COMMA print_input
Rule 40    print_inputs -> print_input
Rule 41    print_input -> STRING
Rule 42    print_input -> ID
Rule 43    matrix_fun -> fun_name LPARENT expression RPARENT
Rule 44    fun_name -> EYE
Rule 45    fun_name -> ZEROS
Rule 46    fun_name -> ONES
Rule 47    loop -> for
Rule 48    loop -> while
Rule 49    for -> FOR for_expression instruction
Rule 50    for_expression -> ID ASSIGN range
Rule 51    while -> WHILE LPARENT comparison RPARENT instruction
Rule 52    branch -> IF LPARENT comparison RPARENT instruction
Rule 53    branch -> IF LPARENT comparison RPARENT instruction ELSE instruction
Rule 54    range -> num_term COLON num_term
Rule 55    term -> ID
Rule 56    term -> number
Rule 57    term -> matrix
Rule 58    term -> string
Rule 59    num_term -> ID
Rule 60    num_term -> number
Rule 61    number -> INT
Rule 62    number -> FLOAT
Rule 63    string -> STRING
Rule 64    matrix -> LSQBRACK vectors RSQBRACK
Rule 65    matrix -> vector
Rule 66    matrix -> matrix_fun
Rule 67    vectors -> vectors COMMA vector
Rule 68    vectors -> vector
Rule 69    vector -> LSQBRACK numbers RSQBRACK
Rule 70    numbers -> numbers COMMA number
Rule 71    numbers -> num_term

Terminals, with rules where they appear

ADD                  : 18
ADDASSIGN            : 12
ASSIGN               : 11 50
BREAK                : 35
COLON                : 54
COMMA                : 39 67 70
CONTINUE             : 36
DIV                  : 21
DIVASSIGN            : 15
DOTADD               : 22
DOTDIV               : 25
DOTMUL               : 24
DOTSUB               : 23
ELSE                 : 53
EQ                   : 34
EYE                  : 44
FLOAT                : 62
FOR                  : 49
ID                   : 9 10 42 50 55 59
IF                   : 52 53
INT                  : 61
LARGER               : 30
LARGEREQ             : 32
LCURLBRACK           : 8
LPARENT              : 17 43 51 52 53
LSQBRACK             : 64 69
MUL                  : 20
MULASSIGN            : 14
NOTEQ                : 33
ONES                 : 46
PRINT                : 38
RCURLBRACK           : 8
RETURN               : 37
RPARENT              : 17 43 51 52 53
RSQBRACK             : 64 69
SEMICOLON            : 4 5
SMALLER              : 29
SMALLEREQ            : 31
STRING               : 41 63
SUB                  : 19 26
SUBASSIGN            : 13
TRANSPOSE            : 27
WHILE                : 51
ZEROS                : 45
error                : 

Nonterminals, with rules where they appear

assignment           : 4
assignment_operator  : 9 10
branch               : 7
call                 : 5
comparison           : 51 52 53
comparison_operator  : 28
expression           : 9 10 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 27 28 28 37 43
for                  : 47
for_expression       : 49
fun_name             : 43
instruction          : 2 3 49 51 52 53 53
instructions         : 1 2 8
loop                 : 6
matrix               : 10 57
matrix_fun           : 66
num_term             : 54 54 71
number               : 56 60 70
numbers              : 69 70
print_input          : 39 40
print_inputs         : 38 39
program              : 0
range                : 50
string               : 58
term                 : 16
vector               : 65 67 68
vectors              : 64 67
while                : 48

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . assignment SEMICOLON
    (5) instruction -> . call SEMICOLON
    (6) instruction -> . loop
    (7) instruction -> . branch
    (8) instruction -> . LCURLBRACK instructions RCURLBRACK
    (9) assignment -> . ID assignment_operator expression
    (10) assignment -> . ID matrix assignment_operator expression
    (35) call -> . BREAK
    (36) call -> . CONTINUE
    (37) call -> . RETURN expression
    (38) call -> . PRINT print_inputs
    (47) loop -> . for
    (48) loop -> . while
    (52) branch -> . IF LPARENT comparison RPARENT instruction
    (53) branch -> . IF LPARENT comparison RPARENT instruction ELSE instruction
    (49) for -> . FOR for_expression instruction
    (51) while -> . WHILE LPARENT comparison RPARENT instruction

    LCURLBRACK      shift and go to state 8
    ID              shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    IF              shift and go to state 16
    FOR             shift and go to state 17
    WHILE           shift and go to state 18

    program                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    assignment                     shift and go to state 4
    call                           shift and go to state 5
    loop                           shift and go to state 6
    branch                         shift and go to state 7
    for                            shift and go to state 14
    while                          shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . assignment SEMICOLON
    (5) instruction -> . call SEMICOLON
    (6) instruction -> . loop
    (7) instruction -> . branch
    (8) instruction -> . LCURLBRACK instructions RCURLBRACK
    (9) assignment -> . ID assignment_operator expression
    (10) assignment -> . ID matrix assignment_operator expression
    (35) call -> . BREAK
    (36) call -> . CONTINUE
    (37) call -> . RETURN expression
    (38) call -> . PRINT print_inputs
    (47) loop -> . for
    (48) loop -> . while
    (52) branch -> . IF LPARENT comparison RPARENT instruction
    (53) branch -> . IF LPARENT comparison RPARENT instruction ELSE instruction
    (49) for -> . FOR for_expression instruction
    (51) while -> . WHILE LPARENT comparison RPARENT instruction

    $end            reduce using rule 1 (program -> instructions .)
    LCURLBRACK      shift and go to state 8
    ID              shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    IF              shift and go to state 16
    FOR             shift and go to state 17
    WHILE           shift and go to state 18

    instruction                    shift and go to state 19
    assignment                     shift and go to state 4
    call                           shift and go to state 5
    loop                           shift and go to state 6
    branch                         shift and go to state 7
    for                            shift and go to state 14
    while                          shift and go to state 15

state 3

    (3) instructions -> instruction .

    LCURLBRACK      reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    FOR             reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    RCURLBRACK      reduce using rule 3 (instructions -> instruction .)


state 4

    (4) instruction -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 20


state 5

    (5) instruction -> call . SEMICOLON

    SEMICOLON       shift and go to state 21


state 6

    (6) instruction -> loop .

    LCURLBRACK      reduce using rule 6 (instruction -> loop .)
    ID              reduce using rule 6 (instruction -> loop .)
    BREAK           reduce using rule 6 (instruction -> loop .)
    CONTINUE        reduce using rule 6 (instruction -> loop .)
    RETURN          reduce using rule 6 (instruction -> loop .)
    PRINT           reduce using rule 6 (instruction -> loop .)
    IF              reduce using rule 6 (instruction -> loop .)
    FOR             reduce using rule 6 (instruction -> loop .)
    WHILE           reduce using rule 6 (instruction -> loop .)
    $end            reduce using rule 6 (instruction -> loop .)
    RCURLBRACK      reduce using rule 6 (instruction -> loop .)
    ELSE            reduce using rule 6 (instruction -> loop .)


state 7

    (7) instruction -> branch .

    LCURLBRACK      reduce using rule 7 (instruction -> branch .)
    ID              reduce using rule 7 (instruction -> branch .)
    BREAK           reduce using rule 7 (instruction -> branch .)
    CONTINUE        reduce using rule 7 (instruction -> branch .)
    RETURN          reduce using rule 7 (instruction -> branch .)
    PRINT           reduce using rule 7 (instruction -> branch .)
    IF              reduce using rule 7 (instruction -> branch .)
    FOR             reduce using rule 7 (instruction -> branch .)
    WHILE           reduce using rule 7 (instruction -> branch .)
    $end            reduce using rule 7 (instruction -> branch .)
    RCURLBRACK      reduce using rule 7 (instruction -> branch .)
    ELSE            reduce using rule 7 (instruction -> branch .)


state 8

    (8) instruction -> LCURLBRACK . instructions RCURLBRACK
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . assignment SEMICOLON
    (5) instruction -> . call SEMICOLON
    (6) instruction -> . loop
    (7) instruction -> . branch
    (8) instruction -> . LCURLBRACK instructions RCURLBRACK
    (9) assignment -> . ID assignment_operator expression
    (10) assignment -> . ID matrix assignment_operator expression
    (35) call -> . BREAK
    (36) call -> . CONTINUE
    (37) call -> . RETURN expression
    (38) call -> . PRINT print_inputs
    (47) loop -> . for
    (48) loop -> . while
    (52) branch -> . IF LPARENT comparison RPARENT instruction
    (53) branch -> . IF LPARENT comparison RPARENT instruction ELSE instruction
    (49) for -> . FOR for_expression instruction
    (51) while -> . WHILE LPARENT comparison RPARENT instruction

    LCURLBRACK      shift and go to state 8
    ID              shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    IF              shift and go to state 16
    FOR             shift and go to state 17
    WHILE           shift and go to state 18

    instructions                   shift and go to state 22
    instruction                    shift and go to state 3
    assignment                     shift and go to state 4
    call                           shift and go to state 5
    loop                           shift and go to state 6
    branch                         shift and go to state 7
    for                            shift and go to state 14
    while                          shift and go to state 15

state 9

    (9) assignment -> ID . assignment_operator expression
    (10) assignment -> ID . matrix assignment_operator expression
    (11) assignment_operator -> . ASSIGN
    (12) assignment_operator -> . ADDASSIGN
    (13) assignment_operator -> . SUBASSIGN
    (14) assignment_operator -> . MULASSIGN
    (15) assignment_operator -> . DIVASSIGN
    (64) matrix -> . LSQBRACK vectors RSQBRACK
    (65) matrix -> . vector
    (66) matrix -> . matrix_fun
    (69) vector -> . LSQBRACK numbers RSQBRACK
    (43) matrix_fun -> . fun_name LPARENT expression RPARENT
    (44) fun_name -> . EYE
    (45) fun_name -> . ZEROS
    (46) fun_name -> . ONES

    ASSIGN          shift and go to state 25
    ADDASSIGN       shift and go to state 26
    SUBASSIGN       shift and go to state 27
    MULASSIGN       shift and go to state 28
    DIVASSIGN       shift and go to state 29
    LSQBRACK        shift and go to state 30
    EYE             shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36

    assignment_operator            shift and go to state 23
    matrix                         shift and go to state 24
    vector                         shift and go to state 31
    matrix_fun                     shift and go to state 32
    fun_name                       shift and go to state 33

state 10

    (35) call -> BREAK .

    SEMICOLON       reduce using rule 35 (call -> BREAK .)


state 11

    (36) call -> CONTINUE .

    SEMICOLON       reduce using rule 36 (call -> CONTINUE .)


state 12

    (37) call -> RETURN . expression
    (16) expression -> . term
    (17) expression -> . LPARENT expression RPARENT
    (18) expression -> . expression ADD expression
    (19) expression -> . expression SUB expression
    (20) expression -> . expression MUL expression
    (21) expression -> . expression DIV expression
    (22) expression -> . expression DOTADD expression
    (23) expression -> . expression DOTSUB expression
    (24) expression -> . expression DOTMUL expression
    (25) expression -> . expression DOTDIV expression
    (26) expression -> . SUB expression
    (27) expression -> . expression TRANSPOSE
    (55) term -> . ID
    (56) term -> . number
    (57) term -> . matrix
    (58) term -> . string
    (61) number -> . INT
    (62) number -> . FLOAT
    (64) matrix -> . LSQBRACK vectors RSQBRACK
    (65) matrix -> . vector
    (66) matrix -> . matrix_fun
    (63) string -> . STRING
    (69) vector -> . LSQBRACK numbers RSQBRACK
    (43) matrix_fun -> . fun_name LPARENT expression RPARENT
    (44) fun_name -> . EYE
    (45) fun_name -> . ZEROS
    (46) fun_name -> . ONES

    LPARENT         shift and go to state 39
    SUB             shift and go to state 40
    ID              shift and go to state 41
    INT             shift and go to state 45
    FLOAT           shift and go to state 46
    LSQBRACK        shift and go to state 30
    STRING          shift and go to state 47
    EYE             shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36

    expression                     shift and go to state 37
    term                           shift and go to state 38
    number                         shift and go to state 42
    matrix                         shift and go to state 43
    string                         shift and go to state 44
    vector                         shift and go to state 31
    matrix_fun                     shift and go to state 32
    fun_name                       shift and go to state 33

state 13

    (38) call -> PRINT . print_inputs
    (39) print_inputs -> . print_inputs COMMA print_input
    (40) print_inputs -> . print_input
    (41) print_input -> . STRING
    (42) print_input -> . ID

    STRING          shift and go to state 50
    ID              shift and go to state 51

    print_inputs                   shift and go to state 48
    print_input                    shift and go to state 49

state 14

    (47) loop -> for .

    LCURLBRACK      reduce using rule 47 (loop -> for .)
    ID              reduce using rule 47 (loop -> for .)
    BREAK           reduce using rule 47 (loop -> for .)
    CONTINUE        reduce using rule 47 (loop -> for .)
    RETURN          reduce using rule 47 (loop -> for .)
    PRINT           reduce using rule 47 (loop -> for .)
    IF              reduce using rule 47 (loop -> for .)
    FOR             reduce using rule 47 (loop -> for .)
    WHILE           reduce using rule 47 (loop -> for .)
    $end            reduce using rule 47 (loop -> for .)
    RCURLBRACK      reduce using rule 47 (loop -> for .)
    ELSE            reduce using rule 47 (loop -> for .)


state 15

    (48) loop -> while .

    LCURLBRACK      reduce using rule 48 (loop -> while .)
    ID              reduce using rule 48 (loop -> while .)
    BREAK           reduce using rule 48 (loop -> while .)
    CONTINUE        reduce using rule 48 (loop -> while .)
    RETURN          reduce using rule 48 (loop -> while .)
    PRINT           reduce using rule 48 (loop -> while .)
    IF              reduce using rule 48 (loop -> while .)
    FOR             reduce using rule 48 (loop -> while .)
    WHILE           reduce using rule 48 (loop -> while .)
    $end            reduce using rule 48 (loop -> while .)
    RCURLBRACK      reduce using rule 48 (loop -> while .)
    ELSE            reduce using rule 48 (loop -> while .)


state 16

    (52) branch -> IF . LPARENT comparison RPARENT instruction
    (53) branch -> IF . LPARENT comparison RPARENT instruction ELSE instruction

    LPARENT         shift and go to state 52


state 17

    (49) for -> FOR . for_expression instruction
    (50) for_expression -> . ID ASSIGN range

    ID              shift and go to state 54

    for_expression                 shift and go to state 53

state 18

    (51) while -> WHILE . LPARENT comparison RPARENT instruction

    LPARENT         shift and go to state 55


state 19

    (2) instructions -> instructions instruction .

    LCURLBRACK      reduce using rule 2 (instructions -> instructions instruction .)
    ID              reduce using rule 2 (instructions -> instructions instruction .)
    BREAK           reduce using rule 2 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 2 (instructions -> instructions instruction .)
    RETURN          reduce using rule 2 (instructions -> instructions instruction .)
    PRINT           reduce using rule 2 (instructions -> instructions instruction .)
    IF              reduce using rule 2 (instructions -> instructions instruction .)
    FOR             reduce using rule 2 (instructions -> instructions instruction .)
    WHILE           reduce using rule 2 (instructions -> instructions instruction .)
    $end            reduce using rule 2 (instructions -> instructions instruction .)
    RCURLBRACK      reduce using rule 2 (instructions -> instructions instruction .)


state 20

    (4) instruction -> assignment SEMICOLON .

    LCURLBRACK      reduce using rule 4 (instruction -> assignment SEMICOLON .)
    ID              reduce using rule 4 (instruction -> assignment SEMICOLON .)
    BREAK           reduce using rule 4 (instruction -> assignment SEMICOLON .)
    CONTINUE        reduce using rule 4 (instruction -> assignment SEMICOLON .)
    RETURN          reduce using rule 4 (instruction -> assignment SEMICOLON .)
    PRINT           reduce using rule 4 (instruction -> assignment SEMICOLON .)
    IF              reduce using rule 4 (instruction -> assignment SEMICOLON .)
    FOR             reduce using rule 4 (instruction -> assignment SEMICOLON .)
    WHILE           reduce using rule 4 (instruction -> assignment SEMICOLON .)
    $end            reduce using rule 4 (instruction -> assignment SEMICOLON .)
    RCURLBRACK      reduce using rule 4 (instruction -> assignment SEMICOLON .)
    ELSE            reduce using rule 4 (instruction -> assignment SEMICOLON .)


state 21

    (5) instruction -> call SEMICOLON .

    LCURLBRACK      reduce using rule 5 (instruction -> call SEMICOLON .)
    ID              reduce using rule 5 (instruction -> call SEMICOLON .)
    BREAK           reduce using rule 5 (instruction -> call SEMICOLON .)
    CONTINUE        reduce using rule 5 (instruction -> call SEMICOLON .)
    RETURN          reduce using rule 5 (instruction -> call SEMICOLON .)
    PRINT           reduce using rule 5 (instruction -> call SEMICOLON .)
    IF              reduce using rule 5 (instruction -> call SEMICOLON .)
    FOR             reduce using rule 5 (instruction -> call SEMICOLON .)
    WHILE           reduce using rule 5 (instruction -> call SEMICOLON .)
    $end            reduce using rule 5 (instruction -> call SEMICOLON .)
    RCURLBRACK      reduce using rule 5 (instruction -> call SEMICOLON .)
    ELSE            reduce using rule 5 (instruction -> call SEMICOLON .)


state 22

    (8) instruction -> LCURLBRACK instructions . RCURLBRACK
    (2) instructions -> instructions . instruction
    (4) instruction -> . assignment SEMICOLON
    (5) instruction -> . call SEMICOLON
    (6) instruction -> . loop
    (7) instruction -> . branch
    (8) instruction -> . LCURLBRACK instructions RCURLBRACK
    (9) assignment -> . ID assignment_operator expression
    (10) assignment -> . ID matrix assignment_operator expression
    (35) call -> . BREAK
    (36) call -> . CONTINUE
    (37) call -> . RETURN expression
    (38) call -> . PRINT print_inputs
    (47) loop -> . for
    (48) loop -> . while
    (52) branch -> . IF LPARENT comparison RPARENT instruction
    (53) branch -> . IF LPARENT comparison RPARENT instruction ELSE instruction
    (49) for -> . FOR for_expression instruction
    (51) while -> . WHILE LPARENT comparison RPARENT instruction

    RCURLBRACK      shift and go to state 56
    LCURLBRACK      shift and go to state 8
    ID              shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    IF              shift and go to state 16
    FOR             shift and go to state 17
    WHILE           shift and go to state 18

    instruction                    shift and go to state 19
    assignment                     shift and go to state 4
    call                           shift and go to state 5
    loop                           shift and go to state 6
    branch                         shift and go to state 7
    for                            shift and go to state 14
    while                          shift and go to state 15

state 23

    (9) assignment -> ID assignment_operator . expression
    (16) expression -> . term
    (17) expression -> . LPARENT expression RPARENT
    (18) expression -> . expression ADD expression
    (19) expression -> . expression SUB expression
    (20) expression -> . expression MUL expression
    (21) expression -> . expression DIV expression
    (22) expression -> . expression DOTADD expression
    (23) expression -> . expression DOTSUB expression
    (24) expression -> . expression DOTMUL expression
    (25) expression -> . expression DOTDIV expression
    (26) expression -> . SUB expression
    (27) expression -> . expression TRANSPOSE
    (55) term -> . ID
    (56) term -> . number
    (57) term -> . matrix
    (58) term -> . string
    (61) number -> . INT
    (62) number -> . FLOAT
    (64) matrix -> . LSQBRACK vectors RSQBRACK
    (65) matrix -> . vector
    (66) matrix -> . matrix_fun
    (63) string -> . STRING
    (69) vector -> . LSQBRACK numbers RSQBRACK
    (43) matrix_fun -> . fun_name LPARENT expression RPARENT
    (44) fun_name -> . EYE
    (45) fun_name -> . ZEROS
    (46) fun_name -> . ONES

    LPARENT         shift and go to state 39
    SUB             shift and go to state 40
    ID              shift and go to state 41
    INT             shift and go to state 45
    FLOAT           shift and go to state 46
    LSQBRACK        shift and go to state 30
    STRING          shift and go to state 47
    EYE             shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36

    expression                     shift and go to state 57
    term                           shift and go to state 38
    number                         shift and go to state 42
    matrix                         shift and go to state 43
    string                         shift and go to state 44
    vector                         shift and go to state 31
    matrix_fun                     shift and go to state 32
    fun_name                       shift and go to state 33

state 24

    (10) assignment -> ID matrix . assignment_operator expression
    (11) assignment_operator -> . ASSIGN
    (12) assignment_operator -> . ADDASSIGN
    (13) assignment_operator -> . SUBASSIGN
    (14) assignment_operator -> . MULASSIGN
    (15) assignment_operator -> . DIVASSIGN

    ASSIGN          shift and go to state 25
    ADDASSIGN       shift and go to state 26
    SUBASSIGN       shift and go to state 27
    MULASSIGN       shift and go to state 28
    DIVASSIGN       shift and go to state 29

    assignment_operator            shift and go to state 58

state 25

    (11) assignment_operator -> ASSIGN .

    LPARENT         reduce using rule 11 (assignment_operator -> ASSIGN .)
    SUB             reduce using rule 11 (assignment_operator -> ASSIGN .)
    ID              reduce using rule 11 (assignment_operator -> ASSIGN .)
    INT             reduce using rule 11 (assignment_operator -> ASSIGN .)
    FLOAT           reduce using rule 11 (assignment_operator -> ASSIGN .)
    LSQBRACK        reduce using rule 11 (assignment_operator -> ASSIGN .)
    STRING          reduce using rule 11 (assignment_operator -> ASSIGN .)
    EYE             reduce using rule 11 (assignment_operator -> ASSIGN .)
    ZEROS           reduce using rule 11 (assignment_operator -> ASSIGN .)
    ONES            reduce using rule 11 (assignment_operator -> ASSIGN .)


state 26

    (12) assignment_operator -> ADDASSIGN .

    LPARENT         reduce using rule 12 (assignment_operator -> ADDASSIGN .)
    SUB             reduce using rule 12 (assignment_operator -> ADDASSIGN .)
    ID              reduce using rule 12 (assignment_operator -> ADDASSIGN .)
    INT             reduce using rule 12 (assignment_operator -> ADDASSIGN .)
    FLOAT           reduce using rule 12 (assignment_operator -> ADDASSIGN .)
    LSQBRACK        reduce using rule 12 (assignment_operator -> ADDASSIGN .)
    STRING          reduce using rule 12 (assignment_operator -> ADDASSIGN .)
    EYE             reduce using rule 12 (assignment_operator -> ADDASSIGN .)
    ZEROS           reduce using rule 12 (assignment_operator -> ADDASSIGN .)
    ONES            reduce using rule 12 (assignment_operator -> ADDASSIGN .)


state 27

    (13) assignment_operator -> SUBASSIGN .

    LPARENT         reduce using rule 13 (assignment_operator -> SUBASSIGN .)
    SUB             reduce using rule 13 (assignment_operator -> SUBASSIGN .)
    ID              reduce using rule 13 (assignment_operator -> SUBASSIGN .)
    INT             reduce using rule 13 (assignment_operator -> SUBASSIGN .)
    FLOAT           reduce using rule 13 (assignment_operator -> SUBASSIGN .)
    LSQBRACK        reduce using rule 13 (assignment_operator -> SUBASSIGN .)
    STRING          reduce using rule 13 (assignment_operator -> SUBASSIGN .)
    EYE             reduce using rule 13 (assignment_operator -> SUBASSIGN .)
    ZEROS           reduce using rule 13 (assignment_operator -> SUBASSIGN .)
    ONES            reduce using rule 13 (assignment_operator -> SUBASSIGN .)


state 28

    (14) assignment_operator -> MULASSIGN .

    LPARENT         reduce using rule 14 (assignment_operator -> MULASSIGN .)
    SUB             reduce using rule 14 (assignment_operator -> MULASSIGN .)
    ID              reduce using rule 14 (assignment_operator -> MULASSIGN .)
    INT             reduce using rule 14 (assignment_operator -> MULASSIGN .)
    FLOAT           reduce using rule 14 (assignment_operator -> MULASSIGN .)
    LSQBRACK        reduce using rule 14 (assignment_operator -> MULASSIGN .)
    STRING          reduce using rule 14 (assignment_operator -> MULASSIGN .)
    EYE             reduce using rule 14 (assignment_operator -> MULASSIGN .)
    ZEROS           reduce using rule 14 (assignment_operator -> MULASSIGN .)
    ONES            reduce using rule 14 (assignment_operator -> MULASSIGN .)


state 29

    (15) assignment_operator -> DIVASSIGN .

    LPARENT         reduce using rule 15 (assignment_operator -> DIVASSIGN .)
    SUB             reduce using rule 15 (assignment_operator -> DIVASSIGN .)
    ID              reduce using rule 15 (assignment_operator -> DIVASSIGN .)
    INT             reduce using rule 15 (assignment_operator -> DIVASSIGN .)
    FLOAT           reduce using rule 15 (assignment_operator -> DIVASSIGN .)
    LSQBRACK        reduce using rule 15 (assignment_operator -> DIVASSIGN .)
    STRING          reduce using rule 15 (assignment_operator -> DIVASSIGN .)
    EYE             reduce using rule 15 (assignment_operator -> DIVASSIGN .)
    ZEROS           reduce using rule 15 (assignment_operator -> DIVASSIGN .)
    ONES            reduce using rule 15 (assignment_operator -> DIVASSIGN .)


state 30

    (64) matrix -> LSQBRACK . vectors RSQBRACK
    (69) vector -> LSQBRACK . numbers RSQBRACK
    (67) vectors -> . vectors COMMA vector
    (68) vectors -> . vector
    (70) numbers -> . numbers COMMA number
    (71) numbers -> . num_term
    (69) vector -> . LSQBRACK numbers RSQBRACK
    (59) num_term -> . ID
    (60) num_term -> . number
    (61) number -> . INT
    (62) number -> . FLOAT

    LSQBRACK        shift and go to state 59
    ID              shift and go to state 65
    INT             shift and go to state 45
    FLOAT           shift and go to state 46

    vectors                        shift and go to state 60
    numbers                        shift and go to state 61
    vector                         shift and go to state 62
    number                         shift and go to state 63
    num_term                       shift and go to state 64

state 31

    (65) matrix -> vector .
